aks/ex6/userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: userprofile
  name: userprofile
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userprofile
  template:
    metadata:
      labels:
        app: userprofile
    spec:
      containers:
      - image: registryrxt3043.azurecr.io/team1/userprofile:1.0
        name: userprofile
