aks/ex6/poi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    run: poi
  namespace: api
  name: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: poi  
  template:
    metadata:      
      labels:
        run: poi
    spec:
      containers:
      - image: registryrxt3043.azurecr.io/team1/poi:1.0
        name: poi
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  selector:
    run: poi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
