aks/ex6/trips.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trips
  namespace: api
  name: trips
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trips
  template:
    metadata:
      labels:
        app: trips
    spec:
      containers:
      - image: registryrxt3043.azurecr.io/team1/trips:1.0
        name: trips
---
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  selector:
    app: trips
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
